kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: korona-kiks
spec:
  selector:
    app: korona-kiks
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
